--- a/.gitignore
+++ b/.gitignore
@@ -27,10 +27,12 @@ yarn-error.log*
 # local env files
 .env*.local
 .env
-
+.env.example
 # vercel
 .vercel
 
 # typescript
 *.tsbuildinfo
 next-env.d.ts
+
+.env.example
